# quiver

./: .gitignore  Cargo.toml  README.md
migrations/create_services/: up.sql
run/: core.sqlite
scratch/: scratch.rs
scripts/: clear_services.sql  diesel_cli_install.sh  diesel_db_cleanup.sh  diesel_db_reset.sh  diesel_db_setup.sh  generate_server_keys.sh  sqlite_clear_services_db.sh  sqlite_interactive.sh  supress_warnings.sh
src/: main.rs  schema.rs
src/client/: generic.rs  interfaces.rs  lib.rs  mod.rs  permission.rs
src/client/calendar/: mod.rs
src/client/consumer/: calendar.rs
src/client/producer/: calendar.rs
src/client/server/: mod.rs  server.rs
src/client/service/: mod.rs
src/connection/: mod.rs
src/connection_async/: mod.rs
src/core/: config.rs  core.rs  db.rs  init.rs  lib.rs  main.rs  mod.rs  permission.rs
src/core/db/: db.rs  models.rs  schema.rs
src/db/: mod.rs  models.rs  schema.rs
src/handler/: calendar.rs  generic.rs  mod.rs  nfc.rs  vpn.rs
src/handler/lib/: enums.rs  handler_enums.rs  listeners.rs  mod.rs
src/listener/: mod.rs
src/shared/: calendar.rs  error.rs  errors.rs  lib.rs  location.rs  mod.rs
src/shared/lib/: request.rs
src/shared/structs/: calendar.rs  mod.rs
test/: calendar_tests.rs
