[package]
name = "quiver"
version = "0.1.0"
edition = "2021"
autobins = true
test = true

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version ="1.0.87", features = ["std"] }
openssl = { version = "0.10.42", features = ["vendored"] }
diesel = { version = "2.0.0", features = ["sqlite", "serde_json", "chrono", "r2d2"] }
chrono = { version = "0.4.22", features = ["serde"] }

#tokio = { version = "1.21.2", features = ["full"] }
failure = "0.1.8"
# r2d2 = "0.8.10"
confy = "0.5.0"
env_logger = "0.9.1"
log = "0.4.17"
rand = "0.8.5"
rand_chacha = "0.3.1"

# Crates may no longer be used in future
interprocess = "1.1.1"
quote = "1.0.21"
syn = {version="1.0.103",features=["full","fold"]}